borrar caso y ver casos del cliente logueado

--- a/holamundo/templates/abogado_registrar_caso.html
+++ b/holamundo/templates/abogado_registrar_caso.html
@@ -38,6 +38,10 @@
                             {{ form.tipos_casos }}
                         </div>
                         <div class="form-group">
+                            <label for="id_nombre" class="font-weight-bold">Nombre del caso:</label>
+                            {{ form.nombre }}
+                        </div>
+                        <div class="form-group">
                             <label for="id_Estado" class="font-weight-bold">Estado:</label>
                             {{ form.Estado }}
                         </div>
