ver horarios y ver citas abogado

--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -52,9 +52,9 @@
                         <span key="CitasA">Citas</span>
                     </a>
                     <ul class="sub-menu" aria-expanded="false">
-                        <li><a href="{% url 'registrar_horario'%}" key="Cita">Registro citas</a></li>
-                        <li><a href="{}" key="Email_Read">Ver citas</a></li>
-                        <li><a href="{}" key="Email_Read">Historial citas</a></li>
+                        <li><a href="{% url 'registrar_horario'%}" key="Cita">Registro horarios</a></li>
+                        <li><a href="{% url 'lista_fechas_horarios_abogado'%}" key="Email_Read">Ver horarios</a></li>
+                        <li><a href="{% url 'lista_clientes_citas_abogado' %}" key="Email_Read">Historial citas</a></li>
                         
                     </ul>
                 </li>
