--- a/holamundo/templates/caso.html
+++ b/holamundo/templates/caso.html
@@ -14,7 +14,8 @@
 <body>
     <h1>Detalles del Abogado: {{ abogado.nombrea }}</h1>
 
-    <table class="table table-striped"> 
+    <table class="table table-striped" > 
+        
         <tr>
             <td>N°</td>
             <td>Cliente</td>
@@ -34,6 +35,12 @@
                 <td>{{ caso.descripcion }}</td>
             </tr>
         {% endfor %}
+        <th >
+            <td   colspan="4">
+                <a href="{%url 'abogados_por_cliente' %}" class="btn btn-secondary">Volver </a>
+            </td>
+            
+        </th>
     </table>
 </body>
 </html>
