--- a/holamundo/templates/partials/base.html
+++ b/holamundo/templates/partials/base.html
@@ -71,7 +71,7 @@
                                                 <i class="mdi mdi-cog me-2"></i> Settings
                                             </button>
                                             <div class="dropdown-menu dropdown-menu-end">
-                                                <a class="dropdown-item" href="#">Action</a>
+                                                <a class="dropdown-item" href="#">A</a>
                                                 <a class="dropdown-item" href="#">Another action</a>
                                                 <a class="dropdown-item" href="#">Something else here</a>
                                                 <div class="dropdown-divider"></div>
