--- a/holamundo/templates/dashboard.html
+++ b/holamundo/templates/dashboard.html
@@ -36,7 +36,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Lista de citas</h5>
                     <p class="card-text">Explora la agenda de los abogados y agenda una cita.</p>
-                    <a href="{% url 'citas_list' %}" class="btn btn-primary">Ir</a>
+                    <a href="{}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
             
@@ -62,7 +62,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Citas</h5>
                     <p class="card-text">Lista de citas .</p>
-                    <a href="{% url 'lista_citas' %}" class="btn btn-primary">Ir</a>
+                    <a href="{}" class="btn btn-primary">Ir</a>
                 </div>
                 
             </div>
@@ -76,7 +76,7 @@
                     
                     <h5 class="card-title">Lista de citas</h5>
                     <p class="card-text">Explora la agenda de los abogados y agenda una cita.</p>
-                    <a href="{% url 'citas_list' %}" class="btn btn-primary">Ir</a>
+                    <a href="{}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
             
