--- a/holamundo/templates/dashboard.html
+++ b/holamundo/templates/dashboard.html
@@ -76,7 +76,7 @@
                     
                     <h5 class="card-title">Lista de citas</h5>
                     <p class="card-text">Explora la agenda de los abogados y agenda una cita.</p>
-                    <a href="{}" class="btn btn-primary">Ir</a>
+                    <a href="{%  url 'lista_clientes_citas_abogado' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
             
@@ -97,13 +97,7 @@
                 </div>
             </div>
 
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">Citas</h5>
-                    <p class="card-text">Lista de citas .</p>
-                    <!--- Poner el url de lista de citas de abogado--->
-                    <a href="{}" class="btn btn-primary">Ir</a>
-                </div>
+  
                 
             </div>
         </div>
