--- a/holamundo/templates/dashboard.html
+++ b/holamundo/templates/dashboard.html
@@ -34,9 +34,9 @@
         <div class="card-deck mt-5">
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">Lista de citas</h5>
-                    <p class="card-text">Explora la agenda de los abogados y agenda una cita.</p>
-                    <a href="{}" class="btn btn-primary">Ir</a>
+                    <h5 class="card-title">Registrar cita</h5>
+                    <p class="card-text">Agenda una cita con el abogado de tu preferencia.</p>
+                    <a href="{% url 'abogados_con_horario' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
             
@@ -74,8 +74,8 @@
             <div class="card">
                 <div class="card-body">
                     
-                    <h5 class="card-title">Lista de citas</h5>
-                    <p class="card-text">Explora la agenda de los abogados y agenda una cita.</p>
+                    <h5 class="card-title">Historial  citas</h5>
+                    <p class="card-text">Explora tus citas agendadas.</p>
                     <a href="{%  url 'lista_clientes_citas_abogado' %}" class="btn btn-primary">Ir</a>
                 </div>
             </div>
