--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -165,7 +165,7 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a href="{%url 'abogados_con_horario' %}" key="Cita">Registro citas</a></li>
-                            <li><a href="{}" key="Email_Read">Historial citas</a></li>
+                            <li><a href="{% url 'historial_citas_clientes' %}" key="Email_Read">Historial citas</a></li>
                             
                         </ul>
                     </li>
