--- a/holamundo/templates/editar_cita_cliente.html
+++ b/holamundo/templates/editar_cita_cliente.html
@@ -1,10 +1,24 @@
 {% extends 'partials/base.html' %}
+{% load static %}
+
 {% block content %}
-  <h2>Editar Cita</h2>
-  <p>Fecha de la cita: {{ form.get_fecha_cita }}</p>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Guardar Cambios</button>
-  </form>
+<div class="container"> 
+  <div class="row justify-content-center">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-header bg-primary text-white">
+          <h2>Editar Cita con: {{ abogado.nombrea }} {{ abogado.apellido }}</h2>
+        </div>
+        <div class="card-body">
+          <p>Fecha de la cita: {{ form.get_fecha_cita }}</p>
+          <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Guardar Cambios</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div> 
+</div> 
 {% endblock %}
