--- a/holamundo/templates/partials/sidebar.html
+++ b/holamundo/templates/partials/sidebar.html
@@ -153,7 +153,7 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             
-                            <li><a href="{% url 'email-emailread' %}" key="Email_Read">Editar cliente</a></li>
+                            <li><a href="{% url 'ver_cliente' %}" key="Email_Read">Ver Perfil</a></li>
                             
                         </ul>
                     </li>
